// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders correctly 1`] = `
<div
  class="fd-alert fd-alert--warning"
  id="warningAlert"
  name="fade"
  role="alert"
>
  <button
    aria-controls="alert"
    aria-label="Close"
    class="fd-alert__close"
  />
   
</div>
`;

exports[`Alert renders correctly 2`] = `
<div
  class="fd-alert fd-alert--error fd-alert--dismissible"
  id="errorAlert"
  name="fade"
  role="alert"
>
  <!---->
   
</div>
`;
